# SoundHaus_0.2.0

./: .dockerignore  .env.example  .gitignore  README.md  SOUNDHAUS.md  claude.local.md  docker-compose.yml  package-lock.json  package.json
apps/backend/: .env.example  Dockerfile  Pipfile  config.py  database.py  logging_config.py  main.py  pyproject.toml  requirements.lock.txt  requirements.txt  test_desktop_credentials.sh
apps/backend/fastapi/: Dockerfile  requirements.txt
apps/backend/fastapi/app/: __init__.py  config.py  dependencies.py  main.py  storage.py
apps/backend/fastapi/app/models/: __init__.py
apps/backend/fastapi/app/routers/: auth.py  collaborators.py  health.py  repos.py
apps/backend/fastapi/app/services/: __init__.py  auth_service.py  gitea_service.py  repo_service.py
apps/backend/middlewares/: __init__.py  security_headers.py
apps/backend/models/: __init__.py  base.py  clone_models.py  genre_models.py  invitation_models.py  pat_models.py  repo_models.py  schemas.py  snippet_models.py  webhook_models.py
apps/backend/scripts/: seed_genres.py
apps/backend/services/: auth_service.py  gitea_service.py  pat_service.py  repo_service.py  snippet_service.py  webhook_service.py
apps/desktop/: .gitignore  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.js  vite.config.ts
apps/desktop/electron/: alsViewer.js  gitCommands.js  main.js  preload.js
apps/desktop/src/: App.css  App.tsx  index.css
apps/desktop/src/electron/: home.ts  login.ts  main.ts  preload.ts  project.ts
apps/desktop/src/hooks/: useAlsParser.ts  useElectronIPC.ts  useGitStatus.ts  useLocalStorage.ts
apps/desktop/src/pages/: GitPage.css  GitPage.tsx  HomePage.tsx  LoginPage.tsx  MainPage.css  MainPage.tsx  ProjectInitDialog.tsx  ProjectPage.module.css  ProjectPage.tsx  WebAppPage.css  WebAppPage.tsx
apps/desktop/src/services/: electronAPI.ts  gitService.ts  patService.ts  storageService.ts
apps/desktop/src/types/: electron.d.ts  index.ts
apps/web/: .env.example  BRAND_BIBLE.md  claude.md  package-lock.json  package.json  proxy.ts  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts
apps/web/actions/: auth.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/(dashboard)/: layout.tsx
apps/web/app/explore/: page.tsx
apps/web/components/: Navbar.tsx  Navigation.tsx  RepositoryCard.tsx  RepositoryList.tsx  SignUpForm.tsx  Spinner.tsx
apps/web/src/: App.css  App.tsx  index.css
apps/web/types/: api.ts  commit.ts  repository.ts  user.ts
scripts/: DEPLOYMENT.md  backup.sh  deploy-digital-ocean.sh  run_desktop.sh
(+56 files in other folders)
